# Digital-Accessibility-Toolkit-

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  create_shortcut.ps1  pyproject.toml  requirements.txt  run_app.bat
.github/workflows/: lint.yml  tests.yml
docs/: ARCHITECTURE.md  EXAMPLES.md  IMPACT.md  TROUBLESHOOTING.md
docs/ADR/: 0001-why-accessible-first.md
localization/: en.json  es.json  pt.json
src/backend/: analyzer.py  api.py  database.py  report_generator.py  utils.py
src/backend/checks/: alt_text.py  form_labels.py  heading_hierarchy.py  keyboard_nav.py  language_declared.py
src/frontend/: app.js  index.html  styles.css
tests/: test_analyzer.py
