[project]
name = "digital-accessibility-toolkit"
version = "0.1.0"
description = "Herramienta de ingeniería para auditar, gestionar y optimizar la accesibilidad web."
authors = [{ name = "Robert Salinas" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "beautifulsoup4",
    "requests",
    "pydantic",
    "httpx",
    "jinja2",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "flake8",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
